@@ -51,6 +51,7 @@
 - added im_flood_other() as start of simple segmentation operator
 - added im_segment() 
 - gtk-doc comments for meta
+- gtk-doc comments for header
 
 25/3/09 started 7.18.0
 - revised version numbers
